--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -16,7 +16,7 @@
 
       .top-rhs
         .c-youtube-container
-          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/t1KK74MyzE0", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
+          %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/WDUqfCMbh_8", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
     %h2.text-h2.mb-32 Your Insider Features
     .features
