Add emails for insiders

--- a/app/views/mailers/notifications_mailer/joined_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/joined_insiders.html.haml
@@ -1,30 +1,20 @@
-%p Hey there,
+%p Hey!
 
 %p
-  Welcome to #{link_to 'Exercism', 'https://exercism.org'}!
-  We're excited to have you as a part of our community and looking forward to helping you as you go even deeper on your programming journey.
-
+  Welcome to #{link_to 'Exercism Insiders', 'https://exercism.org/insiders'}!
+  Thank you for part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
 
 %p
-  Exercism is designed to be help you develop a deep understanding of whichever language you choose to learn.
-  We're a registered not-for-profit organisation and 100% free.
-
-%p I put this video together (which you might have seen when you signed up) which walks you through a few key things 👇
+  To learn about what's in Insiders, please check out the dedicated page, or watch our introductory vlog below 👇
 
 %p{ style: "margin-bottom: 24px" }
-  %a{ href: "https://www.youtube.com/watch?v=8rmbTWAncb8", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
-    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-onboarding-welcome-with-play-icon.jpg", style: "width:100%; display:block" }
+  %a{ href: "https://www.youtube.com/watch?v=WDUqfCMbh_8", style: "display:block; box-shadow: 0px 2px 4px #0F0923" }
+    %img{ src: "https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-insiders-1-with-play-icon.jpg", style: "width:100%; display:block" }
 
 %p
-  If you ever get stuck or have questions, don't hesitate to post in #{link_to 'our forum', 'https://forum.exercism.org'}.
-  Our community is friendly and supportive, and we're always happy to help.
-  We believe that learning is a collaborative effort and that we can all learn from each other.
+  I'd love to hear all your thoughts and ideas on our dedicated #{link_to '#insiders channel on Discord', 'https://discord.com/channels/854117591135027261/1103737555490447460'}. So come along and say hello!
 
-%p
-  Finally, don't miss out on our #{link_to 'YouTube channel', 'https://www.youtube.com/@Exercism_org'} where we share interesting interviews, walkthroughs, and tutorials about Exercism.
-  You might find some tips and tricks that will make your learning journey even more enjoyable.
-
-%p Have a great day!
+%p Thanks for being part of our journey. I'm excited for what comes next 🙂
 
 %p
   Jeremy Walker
