--- a/app/views/mailers/notifications_mailer/joined_insiders.text.haml
+++ b/app/views/mailers/notifications_mailer/joined_insiders.text.haml
@@ -1,20 +1,16 @@
-Hey there,
+Hey!
 \
-Welcome to Exercism! We're excited to have you as a part of our community and looking forward to helping you as you go even deeper on your programming journey.
+Welcome to Exercism Insiders (https://exercism.org/insiders)!
+Thank you for part of our story and helping making Exercism the huge success that it is. Insiders is a small way of us saying thank you for your support.
 \
-Exercism is designed to be help you develop a deep understanding of whichever language you choose to learn. We're a registered not-for-profit organisation and 100% free.
+To learn about what's in Insiders, please check out the dedicated page, or watch our introductory vlog: https://www.youtube.com/watch?v=WDUqfCMbh_8
+
+I'd love to hear all your thoughts and ideas on our dedicated #insiders channel on Discord (https://discord.com/channels/854117591135027261/1103737555490447460). So come along and say hello!
 \
-I put this video together (which you might have seen when you signed up) which walks you through a few key things: https://www.youtube.com/watch?v=8rmbTWAncb8
-\
-If you ever get stuck or have questions, don't hesitate to post in our forum. Our community is friendly and supportive, and we're always happy to help. We believe that learning is a collaborative effort and that we can all learn from each other.
-\
-Finally, don't miss out on our YouTube channel where we share interesting interviews, walkthroughs, and tutorials about Exercism. You might find some tips and tricks that will make your learning journey even more enjoyable.
-\
-Have a great day!
+Thanks for being part of our journey. I'm excited for what comes next 🙂
 \
 Jeremy Walker
-Exercism's Co-founder &amp; CEO
-\
-\---
+
+Exercism Co-founder & CEO
 \
 Visit Exercism: #{root_url}
