--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -24,6 +24,7 @@
 @import "./tooltips/task";
 
 @import "./components/textblock";
+@import "./components/spinner";
 @import "./components/financial-amount";
 @import "./components/automated-feedback";
 @import "./components/share-button";
@@ -129,6 +130,7 @@
 @import "./components/widgets/exercise";
 @import "./components/mentor-discussion-post-editor";
 @import "./components/test-run";
+@import "./components/chatgpt";
 @import "./components/alert";
 @import "./components/diff";
 @import "./components/cli-walkthrough";
