Insiders link colors

--- a/app/css/pages/insiders.css
+++ b/app/css/pages/insiders.css
@@ -46,6 +46,9 @@
 
             p {
                 @apply text-p-base text-left;
+                a {
+                    @apply text-lightGold;
+                }
             }
         }
     }
