Fix Insiders new-tesimonial icon on light and bell shadow

--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -113,9 +113,13 @@ body.namespace-.controller-insiders {
         .new-badge {
             background-image: url("icons/new-badge-dark.svg");
         }
+        .new-testimonial {
+            background-image: url("icons/new-testimonial-dark.svg");
+        }
 
         .c-notification {
             background: theme(colors.eerieBlack);
+            box-shadow: 0px 4px 24px rgba(89, 210, 174, 0.4);
 
             .--count {
                 @apply text-eerieBlack bg-seafoamGreen;
