Improve visibility of hljs comments

--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -518,7 +518,7 @@
     --hljs-base: transparent;
     --hljs-mono-1: #abb2bf;
     --hljs-mono-2: #818896;
-    --hljs-mono-3: #5c6370;
+    --hljs-mono-3: #9aa0ac;
     --hljs-hue-1: #56b6c2;
     --hljs-hue-2: #61aeee;
     --hljs-hue-3: #c678dd;
