--- a/app/css/components/test-run.css
+++ b/app/css/components/test-run.css
@@ -46,7 +46,8 @@
             }
         }
         &.failed.grouped-by-task {
-            @apply bg-veryLightBlue text-textColor2;
+            background: var(--backgroundColorExerciseStatusTagLocked);
+            @apply text-textColor2;
 
             & .--dot {
                 @apply hidden;
@@ -211,6 +212,9 @@
             & .--summary-inner {
                 @apply flex items-center;
                 @apply py-10 px-24;
+                .c-icon {
+                    @apply filter-textColor6;
+                }
             }
 
             & .--status {
@@ -270,6 +274,6 @@
         }
     }
     & .instructions-btn {
-        @apply border-borderColor6 text-textColor6;
+        @apply border-borderColor6 text-textColor1;
     }
 }
