--- a/app/css/pages/profile.css
+++ b/app/css/pages/profile.css
@@ -150,7 +150,7 @@
                             @apply text-h6 leading-170;
                         }
                         & .mentored-by {
-                            @apply flex text-15 leading-160 text-textColor6;
+                            @apply flex text-15 leading-160 text-textColor6 flex-wrap;
                         }
 
                         & .exercise {
