--- a/app/views/cohorts/show.html.haml
+++ b/app/views/cohorts/show.html.haml
@@ -1,5 +1,5 @@
 - if @cohort.begins_at < Date.current
-  .bg-white.relative
+  .bg-backgroundColorA.relative
     .m-20.py-16.px-20.text-18.font-bold.text-red.border-orange.border-1.rounded-5.bg-lightOrange.text-center
       This Cohort has now started and is closed for applications.
 = render "cohorts/show/#{@cohort.slug.underscore}", cohort: @cohort, user_track: @user_track
