--- a/app/views/tracks/mentor_discussions/_introduction.html.haml
+++ b/app/views/tracks/mentor_discussions/_introduction.html.haml
@@ -8,14 +8,14 @@
         by a #{track.title} mentor and discover new ways to approach the problem, and expand and deepen your #{track.title} knowledge.
       .btns
         = link_to "Submit for code review", new_track_exercise_mentor_request_path(track, exercise), class: 'btn-primary btn-m'
-        .wow It’s absolutely free! 😲
+        .wow It&apos;s absolutely free! 😲
 
     = graphical_icon "mentoring-prompt", category: 'graphics'
   .why
     %h3 Why get feedback?
     .points
       .point
-        %h4 Attain real fluency in #{track.title}
+        %h4 Attain real fluency in #{track.title}
         %p
           Learning a language is more than being able to use it, it's about being able to
           %strong think
@@ -46,7 +46,7 @@
         .num 2
         .content
           %h4 Get feedback
-          %p Once a mentor accepts your request, they’ll review your solution and request, and give you your first feedback.
+          %p Once a mentor accepts your request, they&apos;ll review your solution and request, and give you your first feedback.
 
       .point
         .num 3
@@ -58,6 +58,6 @@
         .num 4
         .content
           %h4 End &amp; Celebrate 🎉
-          %p Once you’re happy with your final solution, end the discussion and leave a testimonial for your mentor.
+          %p Once you&apos;re happy with your final solution, end the discussion and leave a testimonial for your mentor.
 
 
