--- a/app/css/pages/exercise-show.css
+++ b/app/css/pages/exercise-show.css
@@ -91,7 +91,7 @@
             @apply text-16 leading-paragraph font-medium;
 
             & a {
-                @apply text-lightBlue;
+                @apply text-prominentLinkColor;
             }
         }
     }
@@ -271,8 +271,9 @@
                     }
                     & a {
                         @apply inline-flex items-center;
-                        @apply font-medium text-lightBlue;
+                        @apply font-medium text-prominentLinkColor;
                         & .c-icon {
+                            @apply filter-prominentLinkColor;
                             height: 12px;
                             width: 12px;
                             @apply ml-8;
@@ -281,7 +282,7 @@
                 }
             }
             & > .c-icon.spinner {
-                @apply ml-24;
+                @apply ml-24 filter-textColor6;
                 height: 24px;
                 width: 24px;
                 animation: spin 3s linear infinite;
@@ -360,8 +361,7 @@
                     & .c-icon {
                         height: 14px;
                         width: 14px;
-                        @apply ml-8;
-                        filter: var(--c-prominent-link-icon-filter);
+                        @apply ml-8 filter-prominentLinkColor;
                     }
                 }
             }
@@ -429,8 +429,7 @@
             @apply text-16 leading-160 mb-16 text-textColor2;
 
             & a {
-                @apply font-medium;
-                color: var(--c-prominent-link-color);
+                @apply font-medium filter-prominentLinkColor;
             }
 
             & strong {
